feat(admin-endpoints): implemented force user logout endpoint
